--- a/index.html
+++ b/index.html
@@ -51,9 +51,7 @@
                         <br>
                         I have completed an intensive Software Engineering Bootcamp, where I acquired the latest industry skills to design, plan, build, debug, refactor, deploy and maintain programs in Java and Python. <br>
                         <br>
-                        My specialisation intent is within the geospatial field, where I am currently busy completing a course in GIS fundamentals and upskilling in ArcGIS Pro .<br>
-                        <br>
-                        As a freelance digital designer and SBO I have designed and developed custom WordPress and Shopify websites with aesthetic branding assets and strategic applications. <br>
+                        As a freelance digital designer I have designed and developed custom WordPress and Shopify websites from concept to completion with aesthetic branding assets and strategic applications. I am also a small business owner and proud to have had my products featured in a handful of South Africa's top publications. <br>
                         <br>
                         I impacted positive change through my 6 years of experience in the co-creation and operation of a sustainable environmental program for a  non-profit organisation. <br>
                         <br>
@@ -252,7 +250,7 @@
                 <div>
                     <h5 style = "color: white">Stuart Boyd</h5>
                     <p><b>Boyd & Ogier Models</b> <br> Director </p>
-                    <p><a href = mailto:cstuart@boydandogier.com style="letter-spacing: 1px;"> EMAIL </a></p>
+                    <p><a href = mailto:stuart@boydandogier.com style="letter-spacing: 1px;"> EMAIL </a></p>
                 </div>                 
             </div>
         </section>
