--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 <h1> MEGAN BISSCHOFF </h1>  
                 <h4> SOFTWARE ENGINEER | ASPIRING GIS SPECIALIST</h4>
 
-                <h5> I'm a creative, technical and self-motivated junior 
-                    programmer seeking to join the geospatial industry by coupling my qualification in software engineering with my passion for environmental work to code for common good.
+                <h5> I'm an inquisitive, pragmatic, creative and empathetic junior 
+                    programmer seeking to couple my qualification in software engineering with my passion for meaningful work to code for common good.
                 </h5>
             </div> 
         </section>
@@ -60,7 +60,7 @@
                 </div>
 
                 <button class = "section-button">
-                    <a href = "https://www.dropbox.com/s/nik1jvg4uc8feeq/Resume_MB.pdf?dl=0" target = "_blank">DOWNLOAD RESUME</a>
+                    <a href = "https://www.dropbox.com/s/1trdi48g6wd7gwz/Resume_MeganBisschoff_2023.pdf?dl=0" target = "_blank">DOWNLOAD RESUME</a>
                 </button>
             
         </section>
