--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <!-- Landing page text -->   
             <div class = "hero-text">
                 <h1> MEGAN BISSCHOFF </h1>  
-                <h4> SOFTWARE ENGINEER | ASPIRING GIS SPECIALIST</h4>
+                <h4> SOFTWARE ENGINEER | DIGITAL DESIGNER | ASPIRING GIS SPECIALIST</h4>
 
                 <h5> I'm an inquisitive, pragmatic, creative and empathetic junior 
                     programmer seeking to couple my qualification in software engineering with my passion for meaningful work to code for common good.
