--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <!-- Landing page text -->   
             <div class = "hero-text">
                 <h1> MEGAN BISSCHOFF </h1>  
-                <h4> SOFTWARE ENGINEER | DIGITAL DESIGNER | ASPIRING GIS SPECIALIST</h4>
+                <h4> SOFTWARE ENGINEER | ASPIRING GIS SPECIALIST</h4>
 
                 <h5> I'm an inquisitive, pragmatic, creative and empathetic junior 
                     programmer seeking to couple my qualification in software engineering with my passion for meaningful work to code for common good.
@@ -53,7 +53,7 @@
                         <br>
                         As a freelance digital designer I have designed and developed custom WordPress and Shopify websites from concept to completion with aesthetic branding assets and strategic applications. I am also a small business owner and proud to have had my products featured in a handful of South Africa's top publications. <br>
                         <br>
-                        I impacted positive change through my 6 years of experience in the co-creation and operation of a sustainable environmental program for a  non-profit organisation. <br>
+                        I impacted positive change through my 6 years of experience in the co-creation and operation of a sustainable environmental program for a non-profit organisation. <br>
                         <br>
                         Through my expertise as a project coordinator, mutlifaceted designer, environmentalist and solo entrepreneur I have developed an aptitude for innovation, collaboration and critical thinking while maintaining a high level of attention to detail, adaptability and integrity.
                     </p><br>
